tests/checker/ok/wasi_http_types_load.ow
use oneway/std/http/Headers
use oneway/std/http/Method
use oneway/std/http/Request
use oneway/std/http/Response
use oneway/std/http/Status

main = () -> Unit {
    Status(200).print()
}
