tests/checker/fail/http_handler_codegen_pending.ow
use oneway/std/http/Headers
use oneway/std/http/Request
use oneway/std/http/Response
use oneway/std/http/Status

home = (Request) -> Response {
    Response(Headers(), Status(200))
}
